--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,6 +31,9 @@ h1{
 span{
     height: 20%;
     width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: solid #D08832 1px;
     background-color: #D08832;
     color: #034F1B;
